--- a/notebooks/evaluate.ipynb
+++ b/notebooks/evaluate.ipynb
@@ -31,9 +31,9 @@
     "\n",
     "# local\n",
     "from src.helpers.helpers import get_random_indexes, get_random_classes\n",
-    "from src.model.dino_model import get_dino\n",
-    "from src.model.data import create_loader\n",
-    "from src.model.eval import validate_network, validate_network_dino\n",
+    "from src.model.dino_model import get_dino, ViTWrapper\n",
+    "from src.model.data import *\n",
+    "from src.model.train import *\n",
     "\n",
     "# seed\n",
     "SEED = 42\n",
@@ -45,13 +45,35 @@
     "DATA_PATH = Path('/','cluster', 'scratch', 'thobauma', 'dl_data')\n",
     "LOG_PATH = Path(DATA_PATH, 'logs')\n",
     "\n",
+    "# Path for intermediate outputs\n",
+    "BASE_POSTHOC_PATH = Path(DATA_PATH, 'posthoc/')\n",
+    "\n",
+    "# Original Dataset\n",
+    "ORI_PATH = Path(DATA_PATH, 'ori_data/validation/')\n",
+    "ORI_LABEL_PATH = Path(ORI_PATH,'correct_labels.txt')\n",
+    "ORI_IMAGES_PATH = Path(ORI_PATH,'images')\n",
+    "ORI_POSTHOC_PATH = Path(BASE_POSTHOC_PATH, 'original')\n",
+    "\n",
+    "# DAmageNet\n",
     "DN_PATH = Path(DATA_PATH, 'damageNet')\n",
     "DN_LABEL_PATH = Path(DN_PATH, 'val_damagenet.txt')\n",
     "DN_IMAGES_PATH = Path(DN_PATH, 'images')\n",
+    "DN_POSTHOC_PATH = Path(BASE_POSTHOC_PATH, 'damagenet')\n",
+    "DN_POSTHOC_LABEL_PATH = Path(DN_POSTHOC_PATH, 'labels.csv')\n",
     "\n",
-    "ORI_PATH = Path(DATA_PATH, 'ori_data')\n",
-    "ORI_LABEL_PATH = Path(ORI_PATH,'correct_labels.txt')\n",
-    "ORI_IMAGES_PATH = Path(ORI_PATH,'images')"
+    "# PGD\n",
+    "PGD_PATH = Path(DATA_PATH, 'adversarial_data/pgd_03/validation')\n",
+    "PGD_LABEL_PATH = ORI_LABEL_PATH\n",
+    "PGD_IMAGES_PATH = Path(PGD_PATH, 'images')\n",
+    "PGD_POSTHOC_PATH = Path(BASE_POSTHOC_PATH, 'pgd')\n",
+    "PGD_POSTHOC_LABEL_PATH = Path(PGD_POSTHOC_PATH, 'labels.csv')\n",
+    "\n",
+    "# CW\n",
+    "CW_PATH = Path(DATA_PATH, 'adversarial_data/cw/validation')\n",
+    "CW_LABEL_PATH = ORI_LABEL_PATH\n",
+    "CW_IMAGES_PATH = Path(CW_PATH, 'images')\n",
+    "CW_POSTHOC_PATH = Path(BASE_POSTHOC_PATH, 'cw')\n",
+    "CW_POSTHOC_LABEL_PATH = Path(CW_POSTHOC_PATH, 'labels.csv')"
    ]
   },
   {
@@ -63,6 +85,8 @@
     "# If CLASS_SUBSET is specified, INDEX_SUBSET will be ignored. Set CLASS_SUBSET=None if you want to use indexes.\n",
     "INDEX_SUBSET = get_random_indexes()\n",
     "CLASS_SUBSET = get_random_classes()\n",
+    "INDEX_SUBSET = None\n",
+    "CLASS_SUBSET = None\n",
     "\n",
     "BATCH_SIZE = 16\n",
     "\n",
@@ -71,21 +95,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#!python $HOME/deeplearning/setup/collect_env.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "val = ImageDataset(..,index_subset=val_indices)\n",
-    "train = ImageDataset(..,index_subset=train_indices)"
    ]
   },
   {
@@ -108,6 +122,7 @@
       "Please use the `--pretrained_weights` argument to indicate the path of the checkpoint to evaluate.\n",
       "Since no pretrained weights have been provided, we load the reference pretrained DINO weights.\n",
       "Model vit_small built.\n",
+      "Embed dim 1536\n",
       "We load the reference pretrained linear weights.\n"
      ]
     }
@@ -128,34 +143,13 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ori_loader = create_loader(ORI_IMAGES_PATH, ORI_LABEL_PATH, INDEX_SUBSET, CLASS_SUBSET, BATCH_SIZE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dn_loader = create_loader(DN_IMAGES_PATH, DN_LABEL_PATH, None, None, BATCH_SIZE)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Evaluate Dino"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "writer = SummaryWriter(LOG_PATH)\n",
-    "np.set_printoptions(precision=4)"
    ]
   },
   {
@@ -331,7 +325,11 @@
     }
    ],
    "source": [
-    "p, df = validate_network_dino(dn_loader, model, linear_classifier)"
+    "log_dict, logs = validate_network(model, \n",
+    "                linear_classifier, \n",
+    "                val_loader,\n",
+    "                tensor_dir=None,\n",
+    "                adversarial_attack=None)"
    ]
   },
   {
