adversarial dataset generation update

--- a/notebooks/AdversarialDatasetGeneration.ipynb
+++ b/notebooks/AdversarialDatasetGeneration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,6 @@
     "from src.helpers.helpers import get_random_indexes, get_random_classes\n",
     "from src.model.dino_model import get_dino, ViTWrapper\n",
     "from src.model.data import *\n",
-    "from src.model.eval import validate_network_dino\n",
     "\n",
     "# Custom imports\n",
     "import torchattacks\n",
@@ -66,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,21 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please use the `--pretrained_weights` argument to indicate the path of the checkpoint to evaluate.\n",
-      "Since no pretrained weights have been provided, we load the reference pretrained DINO weights.\n",
-      "Model vit_small built.\n",
-      "Embed dim 1536\n",
-      "We load the reference pretrained linear weights.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model, linear_classifier = get_dino(model_name='vit_small', patch_size=16, n_last_blocks=4, avgpool_patchtokens=False, device=DEVICE)"
    ]
@@ -119,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,20 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "31717"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(train_loader.dataset)"
    ]
@@ -161,11 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_wrap = ViTWrapper(model, linear_classifier, DEVICE, n_last_blocks=4, avgpool_patchtokens=False)\n",
+    "model_wrap = ViTWrapper(model, linear_classifier, device=DEVICE, n_last_blocks=4, avgpool_patchtokens=False)\n",
     "model_wrap= model_wrap.to(DEVICE)"
    ]
   },
@@ -178,15 +154,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "attacks = [\n",
-    "    #(PGD(model_wrap, eps=0.06, alpha=0.015, steps=20), 'pgd_06'),\n",
-    "    #(CW(model_wrap, c=50, lr=0.0031, steps=30), 'cw'),\n",
+    "    (PGD(model_wrap, eps=0.06, alpha=0.015, steps=20), 'pgd_06'),\n",
+    "    (CW(model_wrap, c=50, lr=0.0031, steps=30), 'cw'),\n",
     "    #(PGDL2(model_wrap, eps=0.03, alpha=0.015, steps=20), 'pgd_l2_03')\n",
-    "    (FGSM(model_wrap, eps=0.06), 'fgsm_06')\n",
+    "    #(FGSM(model_wrap, eps=0.06), 'fgsm_06')\n",
     "]"
    ]
   },
@@ -194,33 +170,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/397 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------------------------------------\n",
-      "FGSM(model_name=ViTWrapper, device=cuda:0, eps=0.06, attack_mode=default, return_type=float)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 12%|█▏        | 49/397 [01:30<10:28,  1.81s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total = len(train_loader.dataset)\n",
-    "\n",
     "for atk, name in attacks:\n",
     "    \n",
     "    print(\"-\"*70)\n",
@@ -241,7 +193,6 @@
     "    for images, labels, img_names in tqdm(train_loader):\n",
     "        \n",
     "        labels = labels.to(DEVICE)\n",
-    "        \n",
     "        adv_images = atk(images, labels)\n",
     "        \n",
     "        with torch.no_grad():\n",
