remove unused imports

--- a/notebooks/AdversarialDatasetGeneration.ipynb
+++ b/notebooks/AdversarialDatasetGeneration.ipynb
@@ -9,12 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -37,7 +34,6 @@
     "from src.helpers.helpers import get_random_indexes, get_random_classes\n",
     "from src.model.dino_model import get_dino, ViTWrapper\n",
     "from src.model.data import *\n",
-    "from src.model.eval import validate_network_dino\n",
     "\n",
     "# Custom imports\n",
     "import torchattacks\n",
@@ -71,12 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -92,12 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -106,26 +96,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please use the `--pretrained_weights` argument to indicate the path of the checkpoint to evaluate.\n",
-      "Since no pretrained weights have been provided, we load the reference pretrained DINO weights.\n",
-      "Model vit_small built.\n",
-      "Embed dim 1536\n",
-      "We load the reference pretrained linear weights.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model, linear_classifier = get_dino(model_name='vit_small', patch_size=16, n_last_blocks=4, avgpool_patchtokens=False, device=DEVICE)"
    ]
@@ -139,12 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -159,25 +131,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "31717"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(train_loader.dataset)"
    ]
@@ -191,12 +149,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -214,18 +168,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
     "attacks = [\n",
-    "    (PGD(model_wrap, eps=0.06, alpha=0.015, steps=20), 'pgd_06'),\n",
-    "    (CW(model_wrap, c=50, lr=0.0031, steps=30), 'cw'),\n",
+    "    #(PGD(model_wrap, eps=0.06, alpha=0.015, steps=20), 'pgd_06'),\n",
+    "    #(CW(model_wrap, c=50, lr=0.0031, steps=30), 'cw'),\n",
     "    #(PGDL2(model_wrap, eps=0.03, alpha=0.015, steps=20), 'pgd_l2_03')\n",
     "    (FGSM(model_wrap, eps=0.06), 'fgsm_06')\n",
     "]"
@@ -235,35 +186,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/397 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------------------------------------\n",
-      "FGSM(model_name=ViTWrapper, device=cuda:0, eps=0.06, attack_mode=default, return_type=float)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 12%|█▏        | 49/397 [01:30<10:28,  1.81s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total = len(train_loader.dataset)\n",
     "\n",
@@ -317,10 +242,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": []
