environment_test to get infos about the system

--- a/setup/environment_test.ipynb
+++ b/setup/environment_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,11 +22,11 @@
       "Libc version: glibc-2.17\n",
       "\n",
       "Python version: 3.8.5 (default, Oct  6 2020, 10:04:29)  [GCC 6.3.0] (64-bit runtime)\n",
-      "Python platform: Linux-3.10.0-1160.36.2.el7.x86_64-x86_64-with-glibc2.2.5\n",
+      "Python platform: Linux-3.10.0-1160.45.1.el7.x86_64-x86_64-with-glibc2.2.5\n",
       "Is CUDA available: True\n",
       "CUDA runtime version: 11.0.221\n",
-      "GPU models and configuration: GPU 0: GeForce RTX 2080 Ti\n",
-      "Nvidia driver version: 450.80.02\n",
+      "GPU models and configuration: GPU 0: NVIDIA GeForce RTX 2080 Ti\n",
+      "Nvidia driver version: 495.29.05\n",
       "cuDNN version: Could not collect\n",
       "HIP runtime version: N/A\n",
       "MIOpen runtime version: N/A\n",
