--- a/notebooks/posthoc.ipynb
+++ b/notebooks/posthoc.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "25"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -382,19 +382,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "posthoc path: /cluster/scratch/mmathys/dl_data/posthoc/pgd/validation\n",
+      "label path: /cluster/scratch/mmathys/dl_data/posthoc/pgd/validation/labels.csv\n",
+      " 1000/1000 ILSVRC2012_val_00000710 (label 1)\n",
+      "posthoc path: /cluster/scratch/mmathys/dl_data/posthoc/cw/validation\n",
+      "label path: /cluster/scratch/mmathys/dl_data/posthoc/cw/validation/labels.csv\n",
+      " 1000/1000 ILSVRC2012_val_00004873 (label 1)\n",
       "posthoc path: /cluster/scratch/mmathys/dl_data/posthoc/fgsm/validation\n",
       "label path: /cluster/scratch/mmathys/dl_data/posthoc/fgsm/validation/labels.csv\n",
-      " 1000/1000 ILSVRC2012_val_00000738 (label 1)\n",
-      "posthoc path: /cluster/scratch/mmathys/dl_data/posthoc/fgsm/train\n",
-      "label path: /cluster/scratch/mmathys/dl_data/posthoc/fgsm/train/labels.csv\n",
-      " 1000/1000 n02114712_5503 (label 1)\n"
+      " 1000/1000 ILSVRC2012_val_00000738 (label 1)\n"
      ]
     }
    ],
@@ -402,31 +405,31 @@
     "# save to disk!\n",
     "limit = 1000\n",
     "datasets = [\n",
-    "#     {\"posthoc_path\": DN_POSTHOC_PATH,  \"label_path\": DN_POSTHOC_LABEL_PATH},\n",
-    "#     {\n",
-    "#         \"ori_loader\": val_ori_loader,\n",
-    "#         \"adv_loader\": val_pgd_loader,\n",
-    "#         \"posthoc_path\": VAL_PGD_POSTHOC_PATH,\n",
-    "#         \"label_path\": VAL_PGD_POSTHOC_LABEL_PATH\n",
-    "#     },\n",
-    "#     {\n",
-    "#         \"ori_loader\": val_ori_loader,\n",
-    "#         \"adv_loader\": val_cw_loader,\n",
-    "#         \"posthoc_path\": VAL_CW_POSTHOC_PATH,\n",
-    "#         \"label_path\": VAL_CW_POSTHOC_LABEL_PATH\n",
-    "#     },\n",
+    "#    {\"posthoc_path\": DN_POSTHOC_PATH,  \"label_path\": DN_POSTHOC_LABEL_PATH},\n",
+    "     {\n",
+    "         \"ori_loader\": val_ori_loader,\n",
+    "         \"adv_loader\": val_pgd_loader,\n",
+    "         \"posthoc_path\": VAL_PGD_POSTHOC_PATH,\n",
+    "         \"label_path\": VAL_PGD_POSTHOC_LABEL_PATH\n",
+    "     },\n",
+    "     {\n",
+    "         \"ori_loader\": val_ori_loader,\n",
+    "         \"adv_loader\": val_cw_loader,\n",
+    "         \"posthoc_path\": VAL_CW_POSTHOC_PATH,\n",
+    "         \"label_path\": VAL_CW_POSTHOC_LABEL_PATH\n",
+    "     },\n",
     "    {\n",
     "        \"ori_loader\": val_ori_loader,\n",
     "        \"adv_loader\": val_fgsm_loader,\n",
     "        \"posthoc_path\": VAL_FGSM_POSTHOC_PATH,\n",
     "        \"label_path\": VAL_FGSM_POSTHOC_LABEL_PATH\n",
     "    },\n",
-    "    {\n",
-    "        \"ori_loader\": tr_ori_loader,\n",
-    "        \"adv_loader\": tr_fgsm_loader,\n",
-    "        \"posthoc_path\": TR_FGSM_POSTHOC_PATH,\n",
-    "        \"label_path\": TR_FGSM_POSTHOC_LABEL_PATH\n",
-    "    },\n",
+    "#    {\n",
+    "#        \"ori_loader\": tr_ori_loader,\n",
+    "#        \"adv_loader\": tr_fgsm_loader,\n",
+    "#        \"posthoc_path\": TR_FGSM_POSTHOC_PATH,\n",
+    "#        \"label_path\": TR_FGSM_POSTHOC_LABEL_PATH\n",
+    "#    },\n",
     "]\n",
     "\n",
     "for dataset in datasets:\n",
@@ -472,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -567,6 +570,38 @@
      "output_type": "stream",
      "text": [
       "starting train...\n",
+      "PGD:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ep: 9\t Tr. Loss: 0.0004\t Tr. Acc: 1.0000\t T. Loss: 0.0745\t T. Acc: 1.0000: 100%|██████████| 10/10 [02:00<00:00, 12.08s/it]\n",
+      "  0%|          | 0/10 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished Training, saving to pgd.pt\n",
+      "CW:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ep: 9\t Tr. Loss: 0.0161\t Tr. Acc: 1.0000\t T. Loss: 3.5671\t T. Acc: 0.9733: 100%|██████████| 10/10 [02:09<00:00, 12.94s/it]\n",
+      "  0%|          | 0/10 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished Training, saving to cw.pt\n",
       "FGSM:\n"
      ]
     },
@@ -574,14 +609,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep: 9\t Tr. Loss: 0.0001\t Tr. Acc: 1.0000\t T. Loss: 0.7351\t T. Acc: 0.9980: 100%|██████████| 10/10 [00:15<00:00,  1.56s/it]"
+      "Ep: 9\t Tr. Loss: 0.0003\t Tr. Acc: 1.0000\t T. Loss: 0.3993\t T. Acc: 0.9967: 100%|██████████| 10/10 [02:09<00:00, 12.92s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished Training\n"
+      "Finished Training, saving to fgsm.pt\n"
      ]
     },
     {
@@ -596,6 +631,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "print(\"starting train...\")\n",
+    "use_validate_split = True\n",
     "\n",
     "# Hyperparameters\n",
     "EPOCHS = 10\n",
@@ -623,16 +659,17 @@
     "train_files = []\n",
     "test_files = []\n",
     "\n",
-    "def train(train_posthoc_path, val_posthoc_path):\n",
-    "    idx_train_df = pd.read_csv(Path(train_posthoc_path, 'labels.csv'))\n",
+    "def train(train_posthoc_path, val_posthoc_path, name):\n",
     "    idx_val_df = pd.read_csv(Path(val_posthoc_path, 'labels.csv'))\n",
     "    \n",
-    "    #train_len = math.floor(len(idx_val_df) * 0.7)\n",
-    "    #test_len = len(idx_val_df) - train_len\n",
-    "    #train_dataset, val_dataset = random_split(AdvDataset(val_posthoc_path, idx_val_df), [train_len, test_len], generator=torch.Generator().manual_seed(42))\n",
-    "    \n",
-    "    train_dataset = AdvDataset(train_posthoc_path, idx_train_df)\n",
-    "    val_dataset = AdvDataset(val_posthoc_path, idx_val_df)\n",
+    "    if use_validate_split:\n",
+    "        train_len = math.floor(len(idx_val_df) * 0.7)\n",
+    "        test_len = len(idx_val_df) - train_len\n",
+    "        train_dataset, val_dataset = random_split(AdvDataset(val_posthoc_path, idx_val_df), [train_len, test_len], generator=torch.Generator().manual_seed(42))\n",
+    "    else:\n",
+    "        idx_train_df = pd.read_csv(Path(train_posthoc_path, 'labels.csv'))\n",
+    "        train_dataset = AdvDataset(train_posthoc_path, idx_train_df)\n",
+    "        val_dataset = AdvDataset(val_posthoc_path, idx_val_df)\n",
     "    \n",
     "    train_loader = DataLoader(dataset=train_dataset, batch_size=8, shuffle=False)\n",
     "    val_loader = DataLoader(dataset=val_dataset, batch_size=8, shuffle=False)\n",
@@ -709,16 +746,79 @@
     "                                                                                test_running_loss, \n",
     "                                                                                test_acc / len(val_loader.dataset)))\n",
     "\n",
-    "    print('Finished Training')\n",
+    "    save_path = f\"{name}.pt\"\n",
+    "    torch.save(net.state_dict(), save_path)\n",
+    "    print(f'Finished Training, saving to {save_path}')\n",
     "\n",
     "#print(\"DAmageNet:\")\n",
     "#train(DN_POSTHOC_PATH)\n",
-    "#print(\"PGD:\")\n",
-    "#train(None, VAL_PGD_POSTHOC_PATH)\n",
-    "#print(\"CW:\")\n",
-    "#train(None, VAL_CW_POSTHOC_PATH)\n",
+    "print(\"PGD:\")\n",
+    "train(None, VAL_PGD_POSTHOC_PATH, \"pgd\")\n",
+    "print(\"CW:\")\n",
+    "train(None, VAL_CW_POSTHOC_PATH, \"cw\")\n",
     "print(\"FGSM:\")\n",
-    "train(TR_FGSM_POSTHOC_PATH, VAL_FGSM_POSTHOC_PATH)"
+    "train(TR_FGSM_POSTHOC_PATH, VAL_FGSM_POSTHOC_PATH, \"fgsm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pgd:\n",
+      "1.0\n",
+      "0.6166666666666667\n",
+      "1.0\n",
+      "cw:\n",
+      "0.9866666666666667\n",
+      "0.9733333333333334\n",
+      "0.9733333333333334\n",
+      "fgsm:\n",
+      "1.0\n",
+      "0.7966666666666666\n",
+      "0.9966666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = [\"pgd\", \"cw\", \"fgsm\"]\n",
+    "paths = [\n",
+    "    VAL_PGD_POSTHOC_PATH,\n",
+    "    VAL_CW_POSTHOC_PATH,\n",
+    "    VAL_FGSM_POSTHOC_PATH\n",
+    "]\n",
+    "\n",
+    "criterion = nn.BCELoss()\n",
+    "\n",
+    "for name in names:\n",
+    "    print(f\"{name}:\")\n",
+    "    model = LinearBC(1536)\n",
+    "    model.to(device)\n",
+    "    model.load_state_dict(torch.load(f\"{name}.pt\"))\n",
+    "    for path in paths:\n",
+    "        idx_val_df = pd.read_csv(Path(path, 'labels.csv'))\n",
+    "        train_len = math.floor(len(idx_val_df) * 0.7)\n",
+    "        test_len = len(idx_val_df) - train_len\n",
+    "        train_dataset, val_dataset = random_split(AdvDataset(path, idx_val_df), [train_len, test_len], generator=torch.Generator().manual_seed(42))\n",
+    "        train_loader = DataLoader(dataset=train_dataset, batch_size=8, shuffle=False)\n",
+    "        val_loader = DataLoader(dataset=val_dataset, batch_size=8, shuffle=False)\n",
+    "        test_acc = 0.0\n",
+    "        with torch.no_grad():\n",
+    "            for filename, inputs, labels in val_loader:\n",
+    "                inputs = inputs.to(device)\n",
+    "                labels = labels.to(device).float()\n",
+    "                outputs = model(inputs).float()\n",
+    "                outputs = outputs.reshape(-1)\n",
+    "                outputs = outputs.detach().cpu().numpy().round()\n",
+    "                comparison = np.equal(labels.detach().cpu().numpy(), outputs)\n",
+    "                test_acc += comparison.sum()\n",
+    "        print(test_acc / len(val_loader.dataset))\n",
+    "    \n",
+    "    #model.eval()\n"
    ]
   },
   {
