p_classifier: select correct dataset transformation

--- a/notebooks/p_classifier.ipynb
+++ b/notebooks/p_classifier.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,8 @@
     "DATA_PATH = Path('/','cluster', 'scratch', 'thobauma', 'dl_data')\n",
     "MAX_PATH = Path('/','cluster', 'scratch', 'mmathys', 'dl_data')\n",
     "# Path for intermediate outputs\n",
-    "BASE_POSTHOC_PATH = Path(MAX_PATH, 'posthoc/')\n",
-    "# BASE_POSTHOC_PATH = Path(MAX_PATH, 'posthoc-subset/')\n",
+    "# BASE_POSTHOC_PATH = Path(MAX_PATH, 'posthoc/')\n",
+    "BASE_POSTHOC_PATH = Path(MAX_PATH, 'posthoc-subset/')\n",
     "\n",
     "# Original Dataset\n",
     "ORI_PATH = Path(DATA_PATH, 'ori_data/')\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,6 +125,7 @@
     "\n",
     "\n",
     "CLASS_SUBSET = np.load(CLASS_SUBSET_PATH)\n",
+    "CLASS_SUBSET = CLASS_SUBSET[:3]\n",
     "INDEX_SUBSET = None\n",
     "NUM_WORKERS= 0\n",
     "PIN_MEMORY=True\n",
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,6 +229,29 @@
     "        }\n",
     "    }\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train': {'label': PosixPath('/cluster/scratch/thobauma/dl_data/ori_data/train/correct_labels.txt'),\n",
+       "  'images': PosixPath('/cluster/scratch/mmathys/dl_data/adversarial_data/cw/train/images')},\n",
+       " 'val': {'label': PosixPath('/cluster/scratch/thobauma/dl_data/ori_data/validation/correct_labels.txt'),\n",
+       "  'images': PosixPath('/cluster/scratch/mmathys/dl_data/adversarial_data/cw/validation/images')}}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datasets_paths['cw']['b']"
    ]
   },
   {
@@ -257,29 +281,6 @@
    ],
    "source": [
     "model, linear_classifier = get_dino()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'train': {'images': PosixPath('/cluster/scratch/mmathys/dl_data/posthoc-subset/cw/train/images'),\n",
-       "  'label': PosixPath('/cluster/scratch/mmathys/dl_data/posthoc-subset/cw/train/labels.csv')},\n",
-       " 'val': {'images': PosixPath('/cluster/scratch/mmathys/dl_data/posthoc-subset/cw/val/images'),\n",
-       "  'label': PosixPath('/cluster/scratch/mmathys/dl_data/posthoc-subset/cw/val/labels.csv')}}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datasets_paths['cw']['p']"
    ]
   },
   {
@@ -329,6 +330,7 @@
     "    ds_b = datasets_paths[ds]['b']\n",
     "    ds_p = datasets_paths[ds]['p']\n",
     "    logger_dict[ds] = {}\n",
+    "    transform = \n",
     "    for tv in ['train', 'val']:\n",
     "        print(f'''images: {ds_b[tv]['images']}\\nlabel: {ds_b[tv]['label']}\\npred: {ds_p[tv]['label']}''')\n",
     "        data_set = ImageDataset(ds_b[tv]['images'], ds_b[tv]['label'], ORIGINAL_TRANSFORM, class_subset=CLASS_SUBSET)\n",
