--- a/notebooks/adversarialTraining.ipynb
+++ b/notebooks/adversarialTraining.ipynb
@@ -194,22 +194,41 @@
     "    def __init__(self, dim, num_labels=1000, hidden_size=512):\n",
     "        super(LinearClassifier, self).__init__()\n",
     "        self.num_labels = num_labels\n",
-    "        self.linear = nn.Linear(dim, hidden_size) \n",
-    "        self.linear2 = nn.Linear(hidden_size, num_labels) \n",
-    "        self.linear.weight.data.normal_(mean=0.0, std=0.01)\n",
-    "        self.linear.bias.data.zero_()\n",
-    "        self.linear2.weight.data.normal_(mean=0.0, std=0.01)\n",
-    "        self.linear2.bias.data.zero_()\n",
+    "        \n",
+    "        self.linear1 = nn.Linear(dim, hidden_size)\n",
+    "        self.linear2 = nn.Linear(hidden_size, int(hidden_size / 2))\n",
+    "        self.linear3 = nn.Linear(int(hidden_size / 2), int(hidden_size / 4))\n",
+    "        self.linear4 = nn.Linear(int(hidden_size / 4), num_labels)\n",
+    "#         self.linear.weight.data.normal_(mean=0.0, std=0.01)\n",
+    "#         self.linear.bias.data.zero_()\n",
+    "#         self.linear2.weight.data.normal_(mean=0.0, std=0.01)\n",
+    "#         self.linear2.bias.data.zero_()\n",
+    "#         self.initialize()\n",
     "\n",
     "        self.relu = nn.ReLU()\n",
+    "    \n",
+    "    def initialize(self):\n",
+    "        nn.init.normal_(self.linear1.weight, mean=0, std=1.0)\n",
+    "        nn.init.normal_(self.linear1.bias, mean=0, std=1.0)\n",
+    "        nn.init.normal_(self.linear2.weight, mean=0, std=1.0)\n",
+    "        nn.init.normal_(self.linear2.bias, mean=0, std=1.0)\n",
+    "        nn.init.normal_(self.linear3.weight, mean=0, std=1.0)\n",
+    "        nn.init.normal_(self.linear3.bias, mean=0, std=1.0)\n",
+    "        nn.init.normal_(self.linear4.weight, mean=0, std=1.0)\n",
+    "        nn.init.normal_(self.linear4.bias, mean=0, std=1.0)\n",
+    "        # nn.init.xavier_uniform(self.linear.weight.data)\n",
+    "        # self.linear.bias.data.zero_()\n",
     "\n",
     "    def forward(self, x):\n",
     "        # flatten\n",
     "        x = x.view(x.size(0), -1)\n",
     "\n",
     "        # linear layer\n",
-    "        x = self.relu(self.linear(x))\n",
-    "        return self.linear2(x)"
+    "        x = self.relu(self.linear1(x))\n",
+    "        x = self.relu(self.linear2(x))\n",
+    "        x = self.relu(self.linear3(x))\n",
+    "        \n",
+    "        return self.linear4(x)"
    ]
   },
   {
@@ -225,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "linear_classifier = LinearClassifier(base_linear_classifier.linear.in_features, num_labels=len(CLASS_SUBSET))\n",
+    "linear_classifier = LinearClassifier(base_linear_classifier.linear.in_features, num_labels=len(CLASS_SUBSET), hidden_size=2048)\n",
     "linear_classifier = linear_classifier.cuda()"
    ]
   },
@@ -245,7 +264,7 @@
    "outputs": [],
    "source": [
     "# Define attack used for adversarial training\n",
-    "train_attack = PGD(vits, eps=0.3, alpha=2/255, steps=15)"
+    "train_attack = PGD(vits, eps=0.3, alpha=6/255, steps=15)"
    ]
   },
   {
@@ -254,7 +273,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOG_PATH = Path(LOG_BASE_PATH, 'pgd','03')"
+    "LOG_PATH = Path(LOG_BASE_PATH, 'pgd','03_nasib_v2')\n",
+    "if not os.path.isdir(LOG_PATH):\n",
+    "    os.mkdir(LOG_PATH)"
    ]
   },
   {
@@ -266,43 +287,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: [0]  [  0/242]  eta: 0:11:29  lr: 0.000063  loss: 3.358485 (3.358485)  time: 2.849257  data: 0.764331  max mem: 1407\n",
-      "Epoch: [0]  [ 20/242]  eta: 0:09:15  lr: 0.000063  loss: 2.586604 (2.658992)  time: 2.484110  data: 0.533290  max mem: 1431\n",
-      "Epoch: [0]  [ 40/242]  eta: 0:08:24  lr: 0.000063  loss: 1.787498 (2.233511)  time: 2.494883  data: 0.534228  max mem: 1431\n",
-      "Epoch: [0]  [ 60/242]  eta: 0:07:34  lr: 0.000063  loss: 1.598646 (2.025351)  time: 2.496371  data: 0.530708  max mem: 1431\n",
-      "Epoch: [0]  [ 80/242]  eta: 0:06:44  lr: 0.000063  loss: 1.466795 (1.889623)  time: 2.494945  data: 0.527911  max mem: 1431\n",
-      "Epoch: [0]  [100/242]  eta: 0:05:54  lr: 0.000063  loss: 1.403662 (1.791615)  time: 2.492798  data: 0.525898  max mem: 1431\n",
-      "Epoch: [0]  [120/242]  eta: 0:05:04  lr: 0.000063  loss: 1.342546 (1.718228)  time: 2.491139  data: 0.524081  max mem: 1431\n",
-      "Epoch: [0]  [140/242]  eta: 0:04:14  lr: 0.000063  loss: 1.295247 (1.657803)  time: 2.499468  data: 0.532859  max mem: 1431\n",
-      "Epoch: [0]  [160/242]  eta: 0:03:24  lr: 0.000063  loss: 1.250396 (1.607489)  time: 2.497459  data: 0.531061  max mem: 1431\n",
-      "Epoch: [0]  [180/242]  eta: 0:02:34  lr: 0.000063  loss: 1.221807 (1.564457)  time: 2.519520  data: 0.553233  max mem: 1431\n",
-      "Epoch: [0]  [200/242]  eta: 0:01:44  lr: 0.000063  loss: 1.197404 (1.527763)  time: 2.500124  data: 0.533623  max mem: 1431\n",
-      "Epoch: [0]  [220/242]  eta: 0:00:54  lr: 0.000063  loss: 1.169809 (1.495556)  time: 2.504775  data: 0.538572  max mem: 1431\n",
-      "Epoch: [0]  [240/242]  eta: 0:00:04  lr: 0.000063  loss: 1.157444 (1.467644)  time: 2.495195  data: 0.529629  max mem: 1431\n",
-      "Epoch: [0]  [241/242]  eta: 0:00:02  lr: 0.000063  loss: 1.156301 (1.466307)  time: 2.497206  data: 0.531515  max mem: 1431\n",
-      "Epoch: [0] Total time: 0:10:04 (2.499284 s / it)\n",
-      "Averaged stats: lr: 0.000063  loss: 1.156301 (1.466307)\n",
-      "Test:  [ 0/10]  eta: 0:00:25  loss: 1.079725 (1.079725)  acc1: 75.000000 (75.000000)  adv_loss: 1.146046 (1.146046)  adv_acc1: 0.000000 (0.000000)  time: 2.557616  data: 0.546483  max mem: 1441\n",
-      "Test:  [ 9/10]  eta: 0:00:02  loss: 1.079725 (1.080577)  acc1: 75.000000 (79.333334)  adv_loss: 1.148660 (1.150700)  adv_acc1: 0.000000 (0.666667)  time: 2.411361  data: 0.513673  max mem: 1441\n",
-      "Test: Total time: 0:00:24 (2.411678 s / it)\n",
-      "* Acc@1 79.333 loss 1.081\n",
-      "* adv_Acc@1 0.667 adv_loss 1.151\n",
-      "Accuracy at epoch 0 of the network on the 10 test images: 79.3%\n",
-      "Max accuracy so far: 79.33%\n"
+      "Thu Dec 30 20:25:00 2021       \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 450.80.02    Driver Version: 450.80.02    CUDA Version: 11.0     |\n",
+      "|-------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                               |                      |               MIG M. |\n",
+      "|===============================+======================+======================|\n",
+      "|   0  GeForce GTX 1080    Off  | 00000000:04:00.0 Off |                  N/A |\n",
+      "| 27%   29C    P2    37W / 180W |    923MiB /  8119MiB |      0%   E. Process |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   1  GeForce GTX 1080    Off  | 00000000:06:00.0 Off |                  N/A |\n",
+      "| 27%   29C    P8     5W / 180W |      2MiB /  8119MiB |      0%   E. Process |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   2  GeForce GTX 1080    Off  | 00000000:07:00.0 Off |                  N/A |\n",
+      "| 27%   28C    P8     5W / 180W |      2MiB /  8119MiB |      0%   E. Process |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   3  GeForce GTX 1080    Off  | 00000000:0F:00.0 Off |                  N/A |\n",
+      "| 28%   32C    P8     6W / 180W |      2MiB /  8119MiB |      0%   E. Process |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "                                                                               \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| Processes:                                                                  |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+      "|        ID   ID                                                   Usage      |\n",
+      "|=============================================================================|\n",
+      "|    0   N/A  N/A     11598      C   ....8.5/x86_64/bin/python3.8      921MiB |\n",
+      "+-----------------------------------------------------------------------------+\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/cluster/scratch/mmathys/dl_data/logs/pgd/03/log.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-51ce26f1cbf5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m loggers = train(model, \n\u001b[0m\u001b[1;32m      2\u001b[0m                 \u001b[0mlinear_classifier\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                 \u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                 \u001b[0mval_loader\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                 \u001b[0mLOG_PATH\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/AADefDINO/src/model/train.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, classifier, train_loader, validation_loader, log_dir, tensor_dir, optimizer, adversarial_attack, epochs, val_freq, batch_size, lr, to_restore, n, avgpool_patchtokens, writer)\u001b[0m\n\u001b[1;32m     96\u001b[0m         \u001b[0;31m# log\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_main_process\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 98\u001b[0;31m             \u001b[0;32mwith\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mPath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlog_dir\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m\"log.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"a\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     99\u001b[0m                 \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlog_stats\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m             save_dict = {\n",
-      "\u001b[0;32m/cluster/apps/nss/gcc-6.3.0/python/3.8.5/x86_64/lib64/python3.8/pathlib.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(self, mode, buffering, encoding, errors, newline)\u001b[0m\n\u001b[1;32m   1216\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_closed\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1217\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_raise_closed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1218\u001b[0;31m         return io.open(self, mode, buffering, encoding, errors, newline,\n\u001b[0m\u001b[1;32m   1219\u001b[0m                        opener=self._opener)\n\u001b[1;32m   1220\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/cluster/apps/nss/gcc-6.3.0/python/3.8.5/x86_64/lib64/python3.8/pathlib.py\u001b[0m in \u001b[0;36m_opener\u001b[0;34m(self, name, flags, mode)\u001b[0m\n\u001b[1;32m   1072\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_opener\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0o666\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1073\u001b[0m         \u001b[0;31m# A stub for the opener argument to built-in open()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1074\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_accessor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1075\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1076\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_raw_open\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0o777\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/cluster/scratch/mmathys/dl_data/logs/pgd/03/log.txt'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found checkpoint at /cluster/scratch/mmathys/dl_data/logs/pgd/03_nasib_v2/checkpoint.pth.tar\n",
+      "=> loaded 'state_dict' from checkpoint '/cluster/scratch/mmathys/dl_data/logs/pgd/03_nasib_v2/checkpoint.pth.tar' with msg <All keys matched successfully>\n",
+      "=> loaded 'optimizer' from checkpoint: '/cluster/scratch/mmathys/dl_data/logs/pgd/03_nasib_v2/checkpoint.pth.tar'\n",
+      "=> loaded 'scheduler' from checkpoint: '/cluster/scratch/mmathys/dl_data/logs/pgd/03_nasib_v2/checkpoint.pth.tar'\n",
+      "Training of the supervised linear classifier on frozen features completed.\n",
+      "Top-1 test accuracy: 87.3\n"
      ]
     }
    ],
@@ -312,7 +350,7 @@
     "                train_loader,\n",
     "                val_loader, \n",
     "                LOG_PATH, \n",
-    "                epochs=2,\n",
+    "                epochs=20,\n",
     "                adversarial_attack=train_attack,\n",
     "                writer=writer\n",
     "               )"
@@ -320,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
